<resources>
    <string name="app_name">FindMe</string>
    <string name="skip_connection">Passer la connexion</string>
    <string name="connection">Se connecter</string>
    <string name="register">S\'enregistrer</string>
    <string name="or">ou</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_email">Adresse mail</string>
    <string name="nav_bar_itineraires">Mes itinéraires</string>
    <string name="nav_bar_map">Map</string>
    <string name="nav_bar_profile">Mon Profil</string>
    <string name="profile_title">Mon profil</string>
    <string name="setting">setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_title_1">Se balader et gagner des goodies</string>
    <string name="onboarding_title_2">Promennez vous !</string>
    <string name="onboarding_title_3">Gagnez des recompenses</string>
    <string name="onboarding_desc_1">Find me , l\'application des sorties entre amis.Découvrez ou re découvrez le patrimoine locale de votre ville tout en vous amusant !</string>
    <string name="onboarding_desc_2">Selectionnez l\'itinéraire qui vous convient ! Amusez vous en famille ou entre amis !</string>
    <string name="onboarding_desc_3">Recuperez des goodies dans l\'office de tourisme la plus proche !</string>
    <string name="popup_category_see_monuments">Voir tout les monuments</string>
    <string name="buttonBack">Revenir en arrière</string>
</resources>