<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="fr.test200.findme.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:src="@drawable/background_jail"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/title"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.widget.Button
            android:id="@+id/btn_register"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/button_connection"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_connection"/>

        <android.widget.Button
            android:id="@+id/btn_connection"
            android:layout_height="wrap_content"
            android:text="@string/connection"
            style="@style/button_connection"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/separation_connection" />

        <View
            android:id="@+id/separation_connection"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/skip_connection"/>

        <TextView
            android:id="@+id/skip_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_connection"
            android:textAlignment="center"
            style="@style/text_connection"
            android:layout_marginBottom="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>