<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="fr.test200.findme.register.RegisterViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/background_jail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/app_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity">

                    <EditText
                        android:id="@+id/edit_text_pseudo"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_pseudo"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_height="match_parent"
                        android:layout_width="300dp"
                        android:layout_marginTop="30dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/white"
                        android:textColorHint="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_text_pseudo" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_height="match_parent"
                        android:layout_width="300dp"
                        android:layout_marginTop="30dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        app:layout_constraintHorizontal_bias="0.494"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

                    <LinearLayout
                        android:id="@+id/linear_layout_social_network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edit_text_password">

                        <ImageView
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:src="@drawable/ic_google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="30dp"
                            android:gravity="center"
                            android:text="@string/or"
                            android:textColor="@color/white"
                            android:textSize="@dimen/button_label" />

                        <ImageView
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:src="@drawable/ic_facebook" />
                    </LinearLayout>

                    <android.widget.Button
                        android:id="@+id/btn_connection"
                        style="@style/button_connection"
                        android:layout_marginTop="40dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button"
                        android:backgroundTint="@color/white"
                        android:text="@string/register"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linear_layout_social_network" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>